tests/ui/coherence/coherence-overlap-trait-alias.stderr
error[E0119]: conflicting implementations of trait `C` for type `u32`
  --> $DIR/coherence-overlap-trait-alias.rs:15:1
   |
LL | impl<T: AB> C for T {}
   | ------------------- first implementation here
LL | impl C for u32 {}
   | ^^^^^^^^^^^^^^ conflicting implementation for `u32`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0119`.
